<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <!-- Search Note -->
        <item android:id="@+id/action_search"
            android:title="@string/action_search"
            android:icon="@drawable/search_icon"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView" />

        <!-- Sort -->
        <item android:id="@+id/action_sort"
            android:title="@string/action_sort"
            app:showAsAction="never" />

        <!-- Empty trash can -->
        <item android:id="@+id/action_empty"
            android:title="@string/action_empty"
            android:icon="@drawable/delete_icon"
            app:showAsAction="never" />



</menu>