<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--        <item android:id="@+id/action_back"-->
<!--            android:title="Trở về"-->
<!--            android:icon="@drawable/ic_back"-->
<!--            app:iconTint="@color/black"-->
<!--            app:showAsAction="always|collapseActionView"-->
<!--            />-->

        <!-- Search Note -->
        <item android:id="@+id/action_search"
            android:title="@string/action_search"
            android:icon="@drawable/search_icon"
            app:iconTint="@color/background"
            app:showAsAction="always|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView" />
        <!-- Sort -->
        <item android:id="@+id/action_sort"
            android:title="@string/action_sort"
            android:icon="@drawable/sort_icon"
            app:iconTint="@color/black"
            app:showAsAction="never" />

        <!-- Clear -->
        <item android:id="@+id/action_clear"
            android:title="@string/action_clear"
            android:icon="@drawable/trash_icon"
            app:iconTint="@color/black"
            app:showAsAction="never" />
</menu>